Implement operationType support for temporary limits